--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         uses: egor-tensin/setup-gcc@v1
       
       - name: Build
-        run: cc -g main.cpp -o FuckWindows.exe
+        run: g++ -g main.cpp -o FuckWindows.exe
 
       - name: Publish
         uses: softprops/action-gh-release@v1
