Finish deploy script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,4 +26,5 @@ jobs:
 
       - name: Publish Release
         uses: softprops/action-gh-release@v1
-        files: FuckWindows.exe
+        with:
+          files: FuckWindows.exe
